# stock_learner

./: .gitignore  Cargo.toml  sql.md
daily_gru_classifier/: Cargo.toml
daily_gru_classifier/src/: config.rs  dataset.rs  model.rs  training.rs
daily_linear_classifier/: Cargo.toml  README.md  foo.sql  test_set.sql  training_set.sql  validation_set.sql
daily_linear_classifier/src/: dataset.rs  device.rs  inference.rs  main.rs  model.rs  training.rs
daily_linear_classifier/src/data/: dataset.rs
daily_linear_regression/: Cargo.toml
daily_linear_regression/src/: dataset.rs  inference.rs  main.rs  model.rs  training.rs
daily_lstm_classifier/: Cargo.toml
daily_lstm_classifier/src/: config.rs  dataset.rs  main.rs  model.rs  training.rs
trado/: Cargo.toml
