[workspace]
resolver = "2"
members = [ "daily_linear_classifier","trado"]

[workspace.dependencies]
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
sqlx = {version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"]}
chrono = "0.4.38"
dotenvy = "0.15.7"
anyhow = "1.0.89"
alpaca_api_client = { path = "../../alpaca_api_client" }
tindi ={ path = "../../tindi" }
burn = { version = "0.14.0", features = ["train"] }
